--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>index</title>
+    <title>qq767968585</title>
 </head>
 <body>
-    <h1 align=center>Welcome</h1>
-    <HR align=center width=300 color=#987cb9 SIZE=1><br>
+    <h1 align="center">Welcome</h1>
+    <HR align=center color=#987cb9 SIZE=1><br>
     <a href="https://github.com/qq767968585">Home</a>
 </body>
 </html>
