--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1 align="center">Welcome</h1>
     <HR align=center color=#987cb9 SIZE=1><br>
-    <a href="https://github.com/qq767968585">Home</a>
+    <a href="https://github.com/qq767968585">Home for github</a>
 </body>
 </html>
