--- a/blackcat.html
+++ b/blackcat.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>qq767968585</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>blackcat</title>
 </head>
+
 <body>
-    <h1 align="center">Welcome</h1>
-    <HR align=center color=#987cb9 SIZE=1><br>
-    <a href="https://github.com/qq767968585">Home for github</a>
+    <!-- https://yaw.ee/2246.html -->
+    <!-- 在你的网站底部</body>之前添加以下代码,注意引用资源路径 -->
 	<script src="./jquery-3.5.1.js"></script>
     <script src="./l2dwidget.min.js"></script>
     <script type="text/javascript">
@@ -37,4 +39,5 @@
         L2Dwidget.init(config);
     </script>
 </body>
+
 </html>
