--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>qq767968585</title>
 </head>
+
 <body>
     <h1 align="center">Welcome</h1>
     <HR align=center color=#987cb9 SIZE=1><br>
     <a href="https://github.com/qq767968585">Home for github</a>
-	<script src="./jquery-3.5.1.js"></script>
-    <script src="./l2dwidget.min.js"></script>
+	
+	<script src="./l2dwidget.min.js"></script>
     <script type="text/javascript">
         var config = {
             model: {
